--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,15 +22,15 @@
 
 @keyframes gradient {
   0% {
-    background-position: 0% 50%;
+    background-position: 0% 100%;
   }
 
   50% {
-    background-position: 100% 50%;
+    background-position: 100% 0%;
   }
 
   100% {
-    background-position: 0% 50%;
+    background-position: 0% 100%;
   }
 }
 
@@ -40,6 +40,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: black;
 }
 
 a {
